src/com/example/test/TestParser.java
// Generated from TestParser.g4 by ANTLR 4.9.2

package com.example.test;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TestParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OUTPUT=1, PACKAGE=2, STRUCT=3, CLASS=4, LPAREN=5, RPAREN=6, LBRACE=7, 
		RBRACE=8, LBRACK=9, RBRACK=10, SEMI=11, COMMA=12, DOT=13, LIST=14, MAP=15, 
		ID=16, PACKAGE_NAME=17, ANNOTATION_NAME=18, BACKTICK=19, ASSIGN=20, GT=21, 
		LT=22, BANG=23, TILDE=24, QUESTION=25, COLON=26, EQUAL=27, LE=28, GE=29, 
		NOTEQUAL=30, AND=31, OR=32, INC=33, DEC=34, ADD=35, SUB=36, MUL=37, DIV=38, 
		BITAND=39, BITOR=40, CARET=41, MOD=42, ARROW=43, COLONCOLON=44, DOUBEQOATE=45, 
		AT=46, ELLIPSIS=47, WS=48, COMMENT=49, LINE_COMMENT=50;
	public static final int
		RULE_parse = 0, RULE_statements = 1, RULE_outputDecl = 2, RULE_packageDecl = 3, 
		RULE_outputAnnotationDecl = 4, RULE_structAnnotationDecl = 5, RULE_classAnnotationDecl = 6, 
		RULE_structDecl = 7, RULE_variableDecl = 8, RULE_tagsDecl = 9, RULE_tagDecl = 10, 
		RULE_classDecl = 11, RULE_functionDeclType = 12, RULE_functionDecl = 13, 
		RULE_functionParameterDecl = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "statements", "outputDecl", "packageDecl", "outputAnnotationDecl", 
			"structAnnotationDecl", "classAnnotationDecl", "structDecl", "variableDecl", 
			"tagsDecl", "tagDecl", "classDecl", "functionDeclType", "functionDecl", 
			"functionParameterDecl"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'output'", "'package'", "'struct'", "'class'", "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "';'", "','", "'.'", "'List'", "'Map'", null, null, 
			null, "'`'", "'='", "'>'", "'<'", "'!'", "'~'", "'?'", "':'", "'=='", 
			"'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", 
			"'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'->'", "'::'", "'\"'", "'@'", 
			"'...'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OUTPUT", "PACKAGE", "STRUCT", "CLASS", "LPAREN", "RPAREN", "LBRACE", 
			"RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "LIST", "MAP", 
			"ID", "PACKAGE_NAME", "ANNOTATION_NAME", "BACKTICK", "ASSIGN", "GT", 
			"LT", "BANG", "TILDE", "QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", 
			"AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", 
			"CARET", "MOD", "ARROW", "COLONCOLON", "DOUBEQOATE", "AT", "ELLIPSIS", 
			"WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TestParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TestParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TestParser.EOF, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OUTPUT) | (1L << PACKAGE) | (1L << ID) | (1L << ANNOTATION_NAME))) != 0)) {
				{
				{
				setState(30);
				statements();
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public OutputDeclContext outputDecl() {
			return getRuleContext(OutputDeclContext.class,0);
		}
		public PackageDeclContext packageDecl() {
			return getRuleContext(PackageDeclContext.class,0);
		}
		public StructDeclContext structDecl() {
			return getRuleContext(StructDeclContext.class,0);
		}
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		try {
			setState(42);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				outputDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				packageDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				structDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(41);
				classDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputDeclContext extends ParserRuleContext {
		public TerminalNode OUTPUT() { return getToken(TestParser.OUTPUT, 0); }
		public List<OutputAnnotationDeclContext> outputAnnotationDecl() {
			return getRuleContexts(OutputAnnotationDeclContext.class);
		}
		public OutputAnnotationDeclContext outputAnnotationDecl(int i) {
			return getRuleContext(OutputAnnotationDeclContext.class,i);
		}
		public OutputDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterOutputDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitOutputDecl(this);
		}
	}

	public final OutputDeclContext outputDecl() throws RecognitionException {
		OutputDeclContext _localctx = new OutputDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_outputDecl);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(OUTPUT);
			setState(48);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(45);
					outputAnnotationDecl();
					}
					} 
				}
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(TestParser.PACKAGE, 0); }
		public TerminalNode PACKAGE_NAME() { return getToken(TestParser.PACKAGE_NAME, 0); }
		public PackageDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterPackageDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitPackageDecl(this);
		}
	}

	public final PackageDeclContext packageDecl() throws RecognitionException {
		PackageDeclContext _localctx = new PackageDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_packageDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(PACKAGE);
			setState(52);
			match(PACKAGE_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputAnnotationDeclContext extends ParserRuleContext {
		public Token name;
		public TerminalNode ANNOTATION_NAME() { return getToken(TestParser.ANNOTATION_NAME, 0); }
		public OutputAnnotationDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputAnnotationDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterOutputAnnotationDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitOutputAnnotationDecl(this);
		}
	}

	public final OutputAnnotationDeclContext outputAnnotationDecl() throws RecognitionException {
		OutputAnnotationDeclContext _localctx = new OutputAnnotationDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_outputAnnotationDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			((OutputAnnotationDeclContext)_localctx).name = match(ANNOTATION_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructAnnotationDeclContext extends ParserRuleContext {
		public Token name;
		public TerminalNode ANNOTATION_NAME() { return getToken(TestParser.ANNOTATION_NAME, 0); }
		public StructAnnotationDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structAnnotationDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterStructAnnotationDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitStructAnnotationDecl(this);
		}
	}

	public final StructAnnotationDeclContext structAnnotationDecl() throws RecognitionException {
		StructAnnotationDeclContext _localctx = new StructAnnotationDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_structAnnotationDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			((StructAnnotationDeclContext)_localctx).name = match(ANNOTATION_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassAnnotationDeclContext extends ParserRuleContext {
		public Token name;
		public TerminalNode ANNOTATION_NAME() { return getToken(TestParser.ANNOTATION_NAME, 0); }
		public ClassAnnotationDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classAnnotationDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterClassAnnotationDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitClassAnnotationDecl(this);
		}
	}

	public final ClassAnnotationDeclContext classAnnotationDecl() throws RecognitionException {
		ClassAnnotationDeclContext _localctx = new ClassAnnotationDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_classAnnotationDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			((ClassAnnotationDeclContext)_localctx).name = match(ANNOTATION_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructDeclContext extends ParserRuleContext {
		public Token name;
		public TerminalNode STRUCT() { return getToken(TestParser.STRUCT, 0); }
		public TerminalNode LBRACE() { return getToken(TestParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TestParser.RBRACE, 0); }
		public TerminalNode ID() { return getToken(TestParser.ID, 0); }
		public List<StructAnnotationDeclContext> structAnnotationDecl() {
			return getRuleContexts(StructAnnotationDeclContext.class);
		}
		public StructAnnotationDeclContext structAnnotationDecl(int i) {
			return getRuleContext(StructAnnotationDeclContext.class,i);
		}
		public List<VariableDeclContext> variableDecl() {
			return getRuleContexts(VariableDeclContext.class);
		}
		public VariableDeclContext variableDecl(int i) {
			return getRuleContext(VariableDeclContext.class,i);
		}
		public StructDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterStructDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitStructDecl(this);
		}
	}

	public final StructDeclContext structDecl() throws RecognitionException {
		StructDeclContext _localctx = new StructDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_structDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(60);
					structAnnotationDecl();
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(66);
			((StructDeclContext)_localctx).name = match(ID);
			setState(67);
			match(STRUCT);
			setState(68);
			match(LBRACE);
			setState(70); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(69);
				variableDecl();
				}
				}
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(74);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclContext extends ParserRuleContext {
		public Token name;
		public Token type;
		public List<TerminalNode> ID() { return getTokens(TestParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TestParser.ID, i);
		}
		public TagsDeclContext tagsDecl() {
			return getRuleContext(TagsDeclContext.class,0);
		}
		public TerminalNode LIST() { return getToken(TestParser.LIST, 0); }
		public TerminalNode GT() { return getToken(TestParser.GT, 0); }
		public TerminalNode LT() { return getToken(TestParser.LT, 0); }
		public TerminalNode MAP() { return getToken(TestParser.MAP, 0); }
		public TerminalNode COMMA() { return getToken(TestParser.COMMA, 0); }
		public VariableDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterVariableDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitVariableDecl(this);
		}
	}

	public final VariableDeclContext variableDecl() throws RecognitionException {
		VariableDeclContext _localctx = new VariableDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variableDecl);
		int _la;
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				((VariableDeclContext)_localctx).name = match(ID);
				setState(77);
				((VariableDeclContext)_localctx).type = match(ID);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==BACKTICK) {
					{
					setState(78);
					tagsDecl();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				((VariableDeclContext)_localctx).name = match(ID);
				setState(82);
				match(LIST);
				setState(83);
				match(GT);
				setState(84);
				((VariableDeclContext)_localctx).type = match(ID);
				setState(85);
				match(LT);
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==BACKTICK) {
					{
					setState(86);
					tagsDecl();
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				((VariableDeclContext)_localctx).name = match(ID);
				setState(90);
				match(MAP);
				setState(91);
				match(GT);
				setState(92);
				((VariableDeclContext)_localctx).type = match(ID);
				setState(93);
				match(COMMA);
				setState(94);
				match(ID);
				setState(95);
				match(LT);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==BACKTICK) {
					{
					setState(96);
					tagsDecl();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagsDeclContext extends ParserRuleContext {
		public List<TerminalNode> BACKTICK() { return getTokens(TestParser.BACKTICK); }
		public TerminalNode BACKTICK(int i) {
			return getToken(TestParser.BACKTICK, i);
		}
		public List<TagDeclContext> tagDecl() {
			return getRuleContexts(TagDeclContext.class);
		}
		public TagDeclContext tagDecl(int i) {
			return getRuleContext(TagDeclContext.class,i);
		}
		public TagsDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagsDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterTagsDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitTagsDecl(this);
		}
	}

	public final TagsDeclContext tagsDecl() throws RecognitionException {
		TagsDeclContext _localctx = new TagsDeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tagsDecl);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(BACKTICK);
			{
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(102);
					tagDecl();
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
			setState(108);
			match(BACKTICK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagDeclContext extends ParserRuleContext {
		public Token name;
		public Token vale;
		public TerminalNode COLON() { return getToken(TestParser.COLON, 0); }
		public List<TerminalNode> DOUBEQOATE() { return getTokens(TestParser.DOUBEQOATE); }
		public TerminalNode DOUBEQOATE(int i) {
			return getToken(TestParser.DOUBEQOATE, i);
		}
		public List<TerminalNode> ID() { return getTokens(TestParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TestParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TestParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TestParser.COMMA, i);
		}
		public TagDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterTagDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitTagDecl(this);
		}
	}

	public final TagDeclContext tagDecl() throws RecognitionException {
		TagDeclContext _localctx = new TagDeclContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tagDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			((TagDeclContext)_localctx).name = match(ID);
			setState(111);
			match(COLON);
			setState(112);
			match(DOUBEQOATE);
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(113);
				((TagDeclContext)_localctx).vale = match(ID);
				{
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(114);
					match(COMMA);
					}
				}

				}
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(121);
			match(DOUBEQOATE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public Token name;
		public TerminalNode CLASS() { return getToken(TestParser.CLASS, 0); }
		public TerminalNode LBRACE() { return getToken(TestParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TestParser.RBRACE, 0); }
		public TerminalNode ID() { return getToken(TestParser.ID, 0); }
		public List<ClassAnnotationDeclContext> classAnnotationDecl() {
			return getRuleContexts(ClassAnnotationDeclContext.class);
		}
		public ClassAnnotationDeclContext classAnnotationDecl(int i) {
			return getRuleContext(ClassAnnotationDeclContext.class,i);
		}
		public List<FunctionDeclTypeContext> functionDeclType() {
			return getRuleContexts(FunctionDeclTypeContext.class);
		}
		public FunctionDeclTypeContext functionDeclType(int i) {
			return getRuleContext(FunctionDeclTypeContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitClassDecl(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_classDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(123);
					classAnnotationDecl();
					}
					} 
				}
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(129);
			((ClassDeclContext)_localctx).name = match(ID);
			setState(130);
			match(CLASS);
			setState(131);
			match(LBRACE);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(132);
				functionDeclType();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclTypeContext extends ParserRuleContext {
		public Token name;
		public TerminalNode COLON() { return getToken(TestParser.COLON, 0); }
		public TerminalNode ID() { return getToken(TestParser.ID, 0); }
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public FunctionDeclTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).enterFunctionDeclType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestParserListener ) ((TestParserListener)listener).exitFunctionDeclType(this);
		}
	}

	public final FunctionDeclTypeContext functionDeclType() throws RecognitionException {
		FunctionDeclTypeContext _localctx = new FunctionDeclTypeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_functionDeclType);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			((FunctionDeclTypeContext)_localctx).name = match(ID);
			setState(141);
			match(COLON);
			setState(145);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(142);
					functionDecl();
					}
					} 
				}
				setState(147);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
